android-debugger v1.2.4 — reflective JDI socket capture for stuck-call recovery
Research into how IntelliJ IDEA, Eclipse JDT, and Microsoft's java-debug handle JDI's uncancellable blocking I/O surfaced the canonical surgical fix: capture the underlying java.net.Socket via reflection at attach time, then close it from a watchdog when the JDI session is wedged. JDI's `SocketConnection` synchronizes reads/writes on separate locks but neither lock guards the actual socket syscall — `Socket.close()` from any thread atomically unblocks every blocked I/O on both sides.

Adds `JdiSocketWedgeRecovery` (`jdi/JdiSocketWedgeRecovery.kt`):
- Walks the OpenJDK JDI internals at attach time: `vm` → `VirtualMachineImpl.target` (TargetVM) → `TargetVM.connection` (SocketConnection) → `SocketConnection.socket` (java.net.Socket). Best-effort with try/catch fallback.
- Tracks consecutive JDI-call timeout streaks via `notifyTimeout()` / `notifySuccess()`.
- After `TIMEOUT_THRESHOLD = 2` consecutive failures, `escalate()` runs two-tier recovery:
  1. Soft: `vm.dispose()` with a 2s budget on a daemon thread. The Dispose JDWP packet, if it lands, makes pending readPacket() calls throw VMDisconnectedException — JDI workers exit naturally and the thread pool reclaims them.
  2. Hard: `Socket.close()` directly. Kernel-level FIN/RST releases any blocked I/O syscall — guaranteed to unwedge.

Wires into ExecutionTools.jdiCallWithTimeout: every successful JDI call resets the streak; every timeout increments it and triggers escalate() at threshold. The currently-leaked worker threads from prior JDI hangs auto-clean because socket.close() makes their blocked readPacket() throw and they exit.

Adds `--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED` to .mcp.json so the reflection works on JDK 9+. On a JDK that doesn't expose the field (different vendor, restricted module), capture fails silently with a warning to stderr and recovery falls back to vm.dispose-only — same as v1.2.3 behavior.

Why this ma